--- a/LL-Volunteer/src/assets/styles/index.css
+++ b/LL-Volunteer/src/assets/styles/index.css
@@ -1,8 +1,16 @@
 /* Body styles */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+
+
 body {
-    font-family: sans-serif, Arial;
+    background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+    font-family: "Montserrat", sans-serif;
     font-size: 14px;
-    color: black;
     margin: 0% 11%;
 }
 
@@ -46,7 +54,7 @@ button:hover{
 }
 
 .links {
-    color: black;
+    color: white;
     font-weight: 500;
     text-decoration: underline;
     font-weight: bold;
