--- a/LL-Volunteer/src/assets/styles/index.css
+++ b/LL-Volunteer/src/assets/styles/index.css
@@ -19,7 +19,7 @@ body {
     margin-bottom: .55em;
     margin-top: .8em;
     font-size: 3rem;
-    color: rgb(34, 106, 184);
+    color: #FCC737;
 }
 
 article{
